k8s/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - image: order:2.0     # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: order           # ім'я контейнеру
          ports:
            - containerPort: 3003  # порт по якому можна звертатись до поди
