k8s/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 8080
      targetPort: 3003
  selector:
    app: order
