k8s/order/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path:
            pathType: "Prefix"
            backend:
              service:
                name: order-service
                port:
                  number: 8080
